2006-12-18  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/30200
	* gfortran.dg/write_fmt_trim.f90: New test.

2006-12-18  Bill Wendling  <wendling@apple.com>

	* g++.old-deja/g++.mike/p11144.C: Renamed id to ID because
	id is an OjbC keyword.

2006-12-18  Brooks Moses  <brooks.moses@codesourcery.com>

	* gfortran.dg/advance_3.f90: Add dg-do compile directive.

2006-12-17  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.c-torture/compile/pr27528.c: Use empty templates.

2006-12-15  Jakub Jelinek  <jakub@redhat.com>

	PR target/30185
	* gcc.c-torture/execute/pr30185.c: New test.

2006-12-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* lib/target-supports.exp (check_weak_available): Use istarget
	"hppa*-*-hpux10*" instead of regexp.
	(check_cxa_atexit_available): Likewise.

2006-12-13  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR testsuite/30157
	* lib/target-supports.exp (check_cxa_atexit_available): Return false
	for target "hppa.*hpux10".

2006-12-13  Lee Millward  <lee.millward@codesourcery.com>

	PR c++27316
	* g++.dg/inherit/error3.C: New test.

	PR c++/28740
	* g++.dg/inherit/error4.C: New test. 
	
2006-12-12  Josh Conner  <jconner@apple.com>

	* g++.dg/abi/thunk3.C: Use .weak_definition on darwin.
	* g++.dg/abi/thunk4.C: Likewise.
	* g++.dg/abi/rtti3.C: Likewise.

2006-12-12  Richard Sandiford  <richard@codesourcery.com>

	* lib/gcc-dg.exp (${tool}_load): Fix invocation of
	saved_${tool}_load.

2006-12-12  Richard Guenther  <rguenther@suse.de>

	PR middle-end/30147
	* gfortran.fortran-torture/compile/pr30147.f90: New testcase.

2006-12-11  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29732
	* g++.dg/template/crash65.C: New test.
	* g++.dg/template/spec16.C: Tweak error markers.

2006-12-11  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/29973
	* gfortran.dg/specifics_1.f90: Remove check for CHAR.
	* gfortran.dg/specifics_2.f90: Remove check for CHAR.
	* gfortran.dg/specifics_3.f90: Remove.