@@ -1,5 +1,10 @@
 2006-12-18  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
+	PR libfortran/30145
+	* gfortran.dg/write_zero_array.f90: New test.
+
+2006-12-18  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
 	PR fortran/30200
 	* gfortran.dg/write_fmt_trim.f90: New test.
 
